app/design/adminhtml/Magento/backend/web/css/source/forms/_fields.less
/* ... */
//
//  Field
//  ---------------------------------------------

.admin__field {
    &:extend(.abs-field-sizes all);
    margin-bottom: 0;

    & + & {
        margin-top: 1.5rem;
    }

    &:not(.admin__field-option) ~ .admin__field-option {
        margin-top: .5rem;
    }

    &.admin__field-option ~ .admin__field-option {
        margin-top: .9rem;
    }

    & ~ .admin__field-option:last-child {
        margin-bottom: .8rem;
    }

    .admin__fieldset > & {
        margin-bottom: 3rem;
        position: relative;
        
        &.field-import_file {
            .input-file {
                margin-top: 6px;
            }
        }
    }

    //  Hide group legend and show first field label instead
    legend {
        &.admin__field-label {
            opacity: 1;
        }
    }

    //  ToDo UI: Scope Labels must be moved from right side of each control to the place under the label of the control.
    //  This code must be removed after Scope Labels are moved completely.
    //  Till that time they'll be disabled by commenting pseudo-element content property.
    &[data-config-scope] {
        &:before {
            #mix-grid .return_length(@field-label-grid__column + @field-control-grid__column, @field-grid__columns);
            color: @field-scope__color;
            content: attr(data-config-scope);
            display: inline-block;
            font-size: @font-size__s;
            left: @_length;
            line-height: 3.2rem;
            margin-left: 2 * @temp_gutter;
            position: absolute;

            & {
                #mix-grid .width(@field-label-grid__column, @field-grid__columns);
            }
        }

        .admin__field-control &:nth-child(n + 2):before {
            content: '';
        }
    }

    &._error {
        .admin__field-control [class*='admin__control-'] [class*='admin__addon-']:before,
        .admin__field-control [class*='admin__addon-']:before,
        .admin__field-control > [class*='admin__control-'] {
            border-color: @field-error-control__border-color;
        }
    }

    &._disabled,
    &._disabled:hover {
        box-shadow: inherit;
        cursor: inherit;
        opacity: 1;
        outline: inherit;
    }

    &._hidden {
        display: none;
    }
}

.admin__field-control {
    & + & {
        margin-top: 1.5rem;
    }

    //  If there is a tooltip
    &._with-tooltip {
        > .admin__control-addon,
        > .admin__field-option,
        > .admin__control-select,
        > .admin__control-text,
        > .admin__control-textarea {
            max-width: ~'calc(100% - @{field-tooltip__width} - 4px)'; // Minus space size
        }

        .admin__field-tooltip {
            width: auto;
        }

        .admin__field-option {
            display: inline-block;
        }
    }

    //  If there is a fallback reset button
    &._with-reset {
        > .admin__control-addon,
        > .admin__control-text,
        > .admin__control-textarea {
            width: ~'calc(100% - @{field-fallback-reset__width} - @{field-fallback-reset-icon__margin-left} - 4px)'; // Minus space size
        }

        .admin__field-fallback-reset {
            margin-left: @field-fallback-reset__margin-left;
            margin-top: @field-fallback-reset__margin-top;
            vertical-align: top;
        }

        //  If both
        &._with-tooltip {
            > .admin__control-addon,
            > .admin__control-text,
            > .admin__control-textarea {
                width: ~'calc(100% - @{field-fallback-reset__width} - @{field-fallback-reset-icon__margin-left} - @{field-tooltip__width} - 8px)'; // Minus 2 space sizes
            }
        }
    }
}

//  Collapsible radiobutton field
.admin__field-collapsible {
    .admin__fieldset > & {
        margin-bottom: 0;

        .admin__field-control {
            border-top: 1px solid @field-collapsible__border-color;
            display: block;
            font-size: 1.7rem;
            font-weight: @font-weight__bold;
            padding: 1.7rem 0;
            width: calc(100% - @indent__l);
        }

        .admin__field-option {
            padding-top: 0;
        }
    }

    + div {
        margin-top: @indent__m;
    }

    .admin__control-radio {
        + label {
            &:before {
                height: 1.8rem;
                width: 1.8rem;
            }
        }

        &:checked {
            + label {
                &:after {
                    left: 4px;
                    top: 5px;
                }
            }
        }
    }
}

//
//  Field messages
//  ---------------------------------------------

//  Field error message
.admin__field-error {
    background: @field-error-message__background-color;
    border: 1px solid @field-error-message__border-color;
    box-sizing: border-box;
    color: @field-error-message__color;
    display: block;
    font-size: @font-size__s;
    font-weight: @font-weight__regular;
    line-height: @line-height__s;
    margin: .2rem 0 0;
    padding: .8rem 1rem .9rem;
}

//  Field notice message
.admin__field-note {
    color: @field-note__color;
    font-size: @field-note__font-size;
    margin: 10px 0 0;
    padding: 0;
}

//  Field additional information
.admin__additional-info {
    padding-top: @indent__s;
}
/* ... */

